# sudoku

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
src/: brute_force_solver.py  sudoku.py
tests/: fixtures.py  test_brute_force_solver.py  test_sudoku.py
